# linux-sdk-python

./: .gitignore  README.md  deploy.sh  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml
edge_impulse_linux/: __init__.py  audio.py  image.py  runner.py
examples/audio/: classify.py
examples/custom/: classify.py  collect.py
examples/image/: .gitignore  classify-full-frame.py  classify-image-dynamic-input-size.py  classify-image.py  classify-video.py  classify.py  device_patches.py  resize_demo.py  set-thresholds.py  track-objects.py
examples/image/utils/: sort_tracker.py
