[metadata]
name = edge_impulse_linux
version = 1.0.7
author = EdgeImpulse Inc.
author_email = hello@edgeimpulse.com
description = Python runner for real-time ML classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edgeimpulse/linux-sdk-python
project_urls =
    Bug Tracker = https://github.com/edgeimpulse/linux-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19
    opencv-python>=4.5.1.48
    psutil>=5.8.0
