[metadata]
name = edge_impulse_linux
version = 1.1.0
author = EdgeImpulse Inc.
author_email = hello@edgeimpulse.com
description = Python runner for real-time ML classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edgeimpulse/linux-sdk-python
project_urls =
    Bug Tracker = https://github.com/edgeimpulse/linux-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE
[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
